<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="#000000"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="50dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="8dp" >

                <TextView
                    android:id="@+id/textView_current_volume_levels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/current_volume_levels"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:paddingTop="15dp" >

                <TextView
                    android:id="@+id/textView_ring_tone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/stream_ring_tone"
                    android:textAppearance="?android:attr/textAppearance"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/seekBar_ring_tone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView_music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/stream_music"
                    android:textAppearance="?android:attr/textAppearance"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/seekBar_music"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView_notifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/stream_notifications"
                    android:textAppearance="?android:attr/textAppearance"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/seekBar_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView_system_sounds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/stream_system_sounds"
                    android:textAppearance="?android:attr/textAppearance"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/seekBar_system_sounds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView_voice_calls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/stream_voice_calls"
                    android:textAppearance="?android:attr/textAppearance"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/seekBar_voice_calls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/textView_monitored_volumes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:text="@string/monitored_volumes"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="10dp" >

                <CheckBox
                    android:id="@+id/checkBox_ring_tone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stream_ring_tone"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/checkBox_music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stream_music"
                    android:textStyle="bold" />
                
                <CheckBox
                    android:id="@+id/checkBox_notifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stream_notifications"
                    android:textStyle="bold" />
                
                <CheckBox
                    android:id="@+id/checkBox_system_sounds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stream_system_sounds"
                    android:textStyle="bold" />
                
                <CheckBox
                    android:id="@+id/checkBox_voice_calls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stream_voice_calls"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
		
    </ScrollView>

</FrameLayout>
